bpo-33209: End framing at the end of C implementation of pickle.Pickler.dump(). (GH-6363) (cherry picked from commit c869529ea9fbed574d34cf7ac139ca3f81b62ef0)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>